remind reader of reuse of n

--- a/tex/overview.tex
+++ b/tex/overview.tex
@@ -218,7 +218,7 @@ $$
 \tau^{(1)}_i(A' \mid A) = \rho_i(a'_i) \prod_{j \neq i} \delta(a'_j - a_j).
 $$
 
-The decomposition of a digraph into SCCs corresponds to a block triangular decomposition of its adjacency matrix.  Say that the graph $G$ has SCCs $C_1, C_2, \ldots C_n$, which have been labelled in such a way that there are no links from vertices in component $C_i$ to component $C_j$ when $i < j$.  Label the vertices in such a way that $V_1, \ldots, V_{n_1}$ belong to $C_1$, $V_{n_1 + 1}, \ldots, V_{n_2}$ belong to $C_2$, etc.  Then, if we choose basis vectors corresponding to this labelling of the vertices, we will have $a_{ij} = 0$ whenever $i$ and $j$ correspond to different components and $i > j$.  This condition is equivalent to stating that the matrix is block triangular with blocks of size $n_1, n_2, \ldots$.
+The decomposition of a digraph into SCCs corresponds to a block triangular decomposition of its adjacency matrix.  Say that the graph $G$ has SCCs $C_1, C_2, \ldots C_n$, where we now use $n$ with no index to specify the number of SCCs, which have been labelled in such a way that there are no links from vertices in component $C_i$ to component $C_j$ when $i < j$.  Label the vertices in such a way that $V_1, \ldots, V_{n_1}$ belong to $C_1$, $V_{n_1 + 1}, \ldots, V_{n_2}$ belong to $C_2$, etc.  Then, if we choose basis vectors corresponding to this labelling of the vertices, we will have $a_{ij} = 0$ whenever $i$ and $j$ correspond to different components and $i > j$.  This condition is equivalent to stating that the matrix is block triangular with blocks of size $n_1, n_2, \ldots$.
 
 Since the determinant of a triangular matrix equals the product of the determinants of its diagonal blocks, it follows that the characteristic polynomial factors as the product of the charactericstic polynomials of its diagonal blocks.  Hence, a block triangular matrix is stable if and only if its diagonal blocks are stable.  Note that this condition does not depend upon the entries off the diagonal (which correspond to links between SCCs) and does not depend upon what order the components appear. This fact implies that the terms evaluating stability such as $\mathcal{S}(A)$ from \ref{eq:robustnessbygraph} decompose into products over the SCCs
 \begin{equation}\label{eq:stabfactor}
