add reference and discussion of Prill 2005

--- a/tex/discussion.tex
+++ b/tex/discussion.tex
@@ -1,7 +1,7 @@
 %!TEX root = ../paper.tex
 % Our development suggests two predictions that could be used to test the theory described here. One is that,
 \section{Conclusion}
-Our analysis predicts that, in general, an ensemble of systems where robustness has been the predominant object of selection and has been positively selected over a sufficiently long period of time should exhibit a bias toward more hierarchical network topologies. Given the manner in which we define robustness in \ref{eq:robustnessfromstoch}, this is a very general constraint. In the short term, this prediction may be further evaluated at the levels of both metabolic and transcription factor networks, which have already been shown to display hierarchical structure, but whose dynamics have not been sufficiently well characterized to ascertain their dynamical robustness as we have defined it here \cite{Zhao2006,Bhardwaj2010,Colm}. At the ecological level, a system subjected to the environmental stress of overfishing, which may imply selection for robustness, has been observed to exhibit such a bias toward more hierarchical network architectures \cite{Bascompte2005}.
+Our analysis predicts that, in general, an ensemble of systems where robustness has been the predominant object of selection and has been positively selected over a sufficiently long period of time should exhibit a bias toward more hierarchical network topologies. Given the manner in which we define robustness in \ref{eq:robustnessfromstoch}, this is a very general constraint. In the short term, this prediction may be further evaluated at the levels of both metabolic and transcription factor networks, which have already been shown to display hierarchical structure, but whose dynamics have not been sufficiently well characterized to ascertain their dynamical robustness as we have defined it here \cite{Zhao2006,Bhardwaj2010,Colm,Prill2005}. Indeed, Figure 2 from \cite{Prill2005} demonstrates an enrichment of various hierarchical network architectures consisting of multiple SCCs relative to those containing cycles with single SCCs for networks with three and four components in \emph{E. coli}, \emph{S. cerevisiae}, and \emph{D. melanogaster} transcription factor networks as well as the signal transduction knowledge environment network and the \emph{C. elegans} neural network. The network architecture that we predict to be enriched by selection for robustness for three variable networks ranks 4th out of 13 in overall abundance across these networks and within each network individually with the exception of the \emph{C. elegans} neural network, and the three more abundant network architectures are all proper subgraphs of this one. These results are essentially consistent with our prediction, though, of course, we would not claim that there could not be various alternative explanations for these observations. At the ecological level, a system subjected to the environmental stress of overfishing, which may imply selection for robustness, has been observed to exhibit such a bias toward more hierarchical network architectures \cite{Bascompte2005}.
 %The other prediction of the theory outlined here that may be able to be checked is the converse statement that an ensemble of systems demonstrating a positive or negative bias in their network topology toward hierarchy may have been under selection for, or respectively against, robustness. Of course, in this case, factors other than selection for robustness would not be ruled out by this analysis alone.
 In the long term, this prediction may be evaluated using experimental evolution by comparing the degree of hierarchy that emerges in the evolution of gene regulatory network topology in the context of both static and fluctuating environments that impose differential selection strengths for dynamical robustness \cite{Leroi1994}.
 
